--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Modificar.cshtml
@@ -126,9 +126,6 @@
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#tab_informacion_general" aria-controls="informacion_general" role="tab" data-toggle="tab">Información general</a>
-            </li>
-            <li>
                 <a href="#tab_contactos_telefonos" aria-controls="contactos_telefonos" role="tab" data-toggle="tab">Contactos/telefono</a>
             </li>
             <li>
@@ -142,54 +139,21 @@
             </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
-            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_informacion_general">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <label for="Idtipo_cliente">Tipo cliente</label>
-                                @Html.DevExpress().ComboBoxFor(q => q.Idtipo_cliente, settings =>
-                           {
-                               settings.Name = "Idtipo_cliente";
-                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                               settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                               settings.Properties.Columns.Add("Idtipo_cliente", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                               settings.Properties.Columns.Add("Descripcion_tip_cliente", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                               //Campo ID
-                               settings.Properties.ValueField = "Idtipo_cliente";
-                               settings.Properties.ValueType = typeof(int);
-                               settings.Properties.TextField = "Descripcion_tip_cliente";
-                               //Boton para seleccionar ningun registro
-                               settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                               settings.Properties.NullText = "== Seleccione ==";
-                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                               settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e,){get_info_tipo_cliente()}";
-                               settings.Properties.AllowNull = true;
-
-                           }).BindList(ViewBag.lst_clientetipo).GetHtml()
-                                @Html.ValidationMessageFor(q => q.Idtipo_cliente, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_contactos_telefonos">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_contactos_telefonos">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="FormaPago">Nombre de Contacto*</label>
-                                @Html.TextBoxFor(q => q.Nombres, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Nombres, "", new { @class = "text-danger" })
+                                <label for="FormaPago">Correo</label>
+                                @Html.TextBoxFor(q => q.Correo, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.Correo, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="FormaPago">Correo*</label>
-                                @Html.TextBoxFor(q => q.Correo, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Correo, "", new { @class = "text-danger" })
+                                <label for="FormaPago">Dirección</label>
+                                @Html.TextBoxFor(q => q.Direccion, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.Direccion, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
@@ -198,23 +162,41 @@
                     <div class="col-md-12">
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="IdTipoCredito">Teléfono*</label>
+                                <label for="IdTipoCredito">Teléfono</label>
                                 @Html.TextBoxFor(q => q.Telefono, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(q => q.Telefono, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="cl_plazo">Celular*</label>
+                                <label for="cl_plazo">Celular</label>
                                 @Html.TextBoxFor(q => q.Celular, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(q => q.Celular, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-3">
                             <div class="form-group">
-                                <label for="FormaPago">Dirección*</label>
-                                @Html.TextBoxFor(q => q.Direccion, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Nombres, "", new { @class = "text-danger" })
+                                <label for="Idtipo_cliente">Tipo cliente</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.Idtipo_cliente, settings =>
+                                {
+                                    settings.Name = "Idtipo_cliente";
+                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                    settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                    settings.Properties.Columns.Add("Idtipo_cliente", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                                    settings.Properties.Columns.Add("Descripcion_tip_cliente", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                                    //Campo ID
+                                    settings.Properties.ValueField = "Idtipo_cliente";
+                                    settings.Properties.ValueType = typeof(int);
+                                    settings.Properties.TextField = "Descripcion_tip_cliente";
+                                    //Boton para seleccionar ningun registro
+                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                                    settings.Properties.NullText = "== Seleccione ==";
+                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                    settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e,){get_info_tipo_cliente()}";
+                                    settings.Properties.AllowNull = true;
+
+                                }).BindList(ViewBag.lst_clientetipo).GetHtml()
+                                @Html.ValidationMessageFor(q => q.Idtipo_cliente, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
@@ -225,40 +207,33 @@
                             <div class="form-group">
                                 <label for="IdTipoCredito">Ciudad*</label>
                                 @Html.DevExpress().ComboBoxFor(q => q.IdCiudad, settings =>
-                                   {
-                                       settings.Name = "IdCiudad";
-                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                                       settings.Properties.Columns.Add("IdCiudad", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                                       settings.Properties.Columns.Add("Descripcion_Ciudad", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                       //Campo ID
-                                       settings.Properties.ValueField = "IdCiudad";
-                                       settings.Properties.ValueType = typeof(string);
-                                       settings.Properties.TextField = "Descripcion_Ciudad";
-                                       //Boton para seleccionar ningun registro
-                                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_parroquias();}";
-                                   }).BindList(ViewBag.lst_ciudad).GetHtml()
+                               {
+                                   settings.Name = "IdCiudad";
+                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                   settings.Properties.Columns.Add("IdCiudad", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                                   settings.Properties.Columns.Add("Descripcion_Ciudad", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                   //Campo ID
+                                   settings.Properties.ValueField = "IdCiudad";
+                                   settings.Properties.ValueType = typeof(string);
+                                   settings.Properties.TextField = "Descripcion_Ciudad";
+                                   //Boton para seleccionar ningun registro
+                                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s, e) { IdParroquia.PerformCallback(); }";
+                               }).BindList(ViewBag.lst_ciudad).GetHtml()
                                 @Html.ValidationMessageFor(q => q.IdCiudad, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="cl_plazo">Parroquia*</label>
-                                @Html.Action("cmb_parroquia", Model.IdParroquia)
+                                @Html.Partial("_cmb_parroquia", Model)
                                 @Html.ValidationMessageFor(q => q.IdParroquia, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
                 </div>
-                @*<div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            @Html.Action("GridViewPartial_cliente_contacto")
-                        </div>
-                    </div>
-                </div>*@
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_informacion_financiera">
                 <div class="row">
@@ -359,16 +334,6 @@
     }
 }
 <script>
-    function OnSelectedCiudadChanged() {
-        GridView_cliente_contacto.GetEditor("IdParroquia").PerformCallback();
-    }
-    function ParroquiaComboBox_BeginCallBack(s, e) {
-        e.customArgs["IdCiudad"] = GridView_cliente_contacto.GetEditor("IdCiudad").GetValue();
-    }
-
-    $(function () {
-        get_list_parroquia();
-    })
 
     $("#pe_apellido").keyup(function () {
         actualizar_nombre_completo();
@@ -378,10 +343,6 @@
     });
     $("#pe_razonSocial").keyup(function () {
         actualizar_nombre_completo();
-    });
-
-    $("#IdCiudad").change(function () {
-        get_list_parroquia();
     });
 
     $("#IdTipoCredito").change(function () {
@@ -422,33 +383,6 @@
         } else {
             $("#pe_nombreCompleto").val(razon_social)
         }
-    }
-
-    function get_list_parroquia() {
-        $("#IdParroquia").empty();
-        var datos = {
-            IdCiudad: $("#IdCiudad").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("get_list_parroquia", "Cliente",new { Area = "Facturacion"})',
-            async: false,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                if (data == '') {
-                    //No hago nada
-                } else {
-                    $.each(data, function (i, row) {
-                        $("#IdParroquia").append("<option value=" + row.IdParroquia + ">" + row.nom_parroquia + "</option>");
-                    });
-                }
-            },
-            error: function (error) {
-
-            }
-        });
     }
 
     function get_info_termino_pago() {
