--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
@@ -123,9 +123,6 @@
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#tab_informacion_general" aria-controls="informacion_general" role="tab" data-toggle="tab">Información general</a>
-            </li>
-            <li>
                 <a href="#tab_contactos_telefonos" aria-controls="contactos_telefonos" role="tab" data-toggle="tab">Contactos/telefono</a>
             </li>
             <li>
@@ -139,40 +136,8 @@
             </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
-            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_informacion_general">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <label for="Idtipo_cliente">Tipo cliente</label>
-                                @Html.DevExpress().ComboBoxFor(q => q.Idtipo_cliente, settings =>
-                           {
-                               settings.Name = "Idtipo_cliente";
-                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                               settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                               settings.Properties.Columns.Add("Idtipo_cliente", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                               settings.Properties.Columns.Add("Descripcion_tip_cliente", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                               //Campo ID
-                               settings.Properties.ValueField = "Idtipo_cliente";
-                               settings.Properties.ValueType = typeof(int);
-                               settings.Properties.TextField = "Descripcion_tip_cliente";
-                               //Boton para seleccionar ningun registro
-                               settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                               settings.Properties.NullText = "== Seleccione ==";
-                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                               settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e,){get_info_tipo_cliente()}";
-                               settings.Properties.AllowNull = true;
 
-                           }).BindList(ViewBag.lst_clientetipo).GetHtml()
-                                @Html.ValidationMessageFor(q => q.Idtipo_cliente, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_contactos_telefonos">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_contactos_telefonos">
                 @*<div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
@@ -184,16 +149,16 @@
                     <div class="col-md-12">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="FormaPago">Nombre de Contacto*</label>
-                                @Html.TextBoxFor(q => q.Nombres, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Nombres, "", new { @class = "text-danger" })
+                                <label for="FormaPago">Correo</label>
+                                @Html.TextBoxFor(q => q.Correo, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.Correo, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="FormaPago">Correo*</label>
-                                @Html.TextBoxFor(q => q.Correo, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Correo, "", new { @class = "text-danger" })
+                                <label for="FormaPago">Dirección</label>
+                                @Html.TextBoxFor(q => q.Direccion, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.Direccion, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
@@ -202,25 +167,45 @@
                     <div class="col-md-12">
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="IdTipoCredito">Teléfono*</label>
+                                <label for="IdTipoCredito">Teléfono</label>
                                 @Html.TextBoxFor(q => q.Telefono, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(q => q.Telefono, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="cl_plazo">Celular*</label>
+                                <label for="cl_plazo">Celular</label>
                                 @Html.TextBoxFor(q => q.Celular, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(q => q.Celular, "", new { @class = "text-danger" })
                             </div>
-                        </div>
-                        <div class="col-md-6">
+                        </div>                        
+
+                        <div class="col-md-3">
                             <div class="form-group">
-                                <label for="FormaPago">Dirección*</label>
-                                @Html.TextBoxFor(q => q.Direccion, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(q => q.Nombres, "", new { @class = "text-danger" })
+                                <label for="Idtipo_cliente">Tipo cliente</label>
+                                @Html.DevExpress().ComboBoxFor(q => q.Idtipo_cliente, settings =>
+                                {
+                                    settings.Name = "Idtipo_cliente";
+                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                    settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                    settings.Properties.Columns.Add("Idtipo_cliente", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                                    settings.Properties.Columns.Add("Descripcion_tip_cliente", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                                    //Campo ID
+                                    settings.Properties.ValueField = "Idtipo_cliente";
+                                    settings.Properties.ValueType = typeof(int);
+                                    settings.Properties.TextField = "Descripcion_tip_cliente";
+                                    //Boton para seleccionar ningun registro
+                                    settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                                    settings.Properties.NullText = "== Seleccione ==";
+                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                    settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e,){get_info_tipo_cliente()}";
+                                    settings.Properties.AllowNull = true;
+
+                                }).BindList(ViewBag.lst_clientetipo).GetHtml()
+                                @Html.ValidationMessageFor(q => q.Idtipo_cliente, "", new { @class = "text-danger" })
                             </div>
                         </div>
+                
                     </div>
                 </div>
                 <div class="row">
@@ -229,28 +214,28 @@
                             <div class="form-group">
                                 <label for="IdTipoCredito">Ciudad*</label>
                                     @Html.DevExpress().ComboBoxFor(q => q.IdCiudad, settings =>
-                                   {
-                                       settings.Name = "IdCiudad";
-                                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                                       settings.Properties.Columns.Add("IdCiudad", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                                       settings.Properties.Columns.Add("Descripcion_Ciudad", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                                       //Campo ID
-                                       settings.Properties.ValueField = "IdCiudad";
-                                       settings.Properties.ValueType = typeof(string);
-                                       settings.Properties.TextField = "Descripcion_Ciudad";
-                                       //Boton para seleccionar ningun registro
-                                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_parroquias();}";
-                                   }).BindList(ViewBag.lst_ciudad).GetHtml()
+                               {
+                                   settings.Name = "IdCiudad";
+                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                   settings.Properties.Columns.Add("IdCiudad", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                                   settings.Properties.Columns.Add("Descripcion_Ciudad", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                                   //Campo ID
+                                   settings.Properties.ValueField = "IdCiudad";
+                                   settings.Properties.ValueType = typeof(string);
+                                   settings.Properties.TextField = "Descripcion_Ciudad";
+                                   //Boton para seleccionar ningun registro
+                                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s, e) { IdParroquia.PerformCallback(); }";
+                               }).BindList(ViewBag.lst_ciudad).GetHtml()
                                     @Html.ValidationMessageFor(q => q.IdCiudad, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="cl_plazo">Parroquia*</label>
-                                @Html.Action("cmb_parroquia", Model.IdParroquia)
+                                @Html.Partial("_cmb_parroquia", Model)
                                 @Html.ValidationMessageFor(q => q.IdParroquia, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -603,28 +588,6 @@
                 else {
                     $("#error_documento").show();
                 }
-            },
-            error: function (error) {
-            }
-        });
-    };
-
-    function get_parroquias() {
-        var datos = {
-            IdCiudad: IdCiudad.GetValue(),
-        }
-
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("get_parroquias", "Cliente", new { Area = "Facturacion" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {              
-                IdParroquia.PerformCallback();
             },
             error: function (error) {
             }
