--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/_cmb_parroquia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/_cmb_parroquia.cshtml
@@ -13,9 +13,10 @@
         settings.Properties.Columns.Add("nom_parroquia", "Parroquia").Width = System.Web.UI.WebControls.Unit.Percentage(80);
         settings.Properties.ValueField = "IdParroquia";
         settings.Properties.TextFormatString = "[{0}] [{1}]]";
+        settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['fx_IdCiudad'] = IdCiudad.GetValue(); }";
 
         settings.Properties.ValueType = typeof(string);
-    })
-    .Bind(Model);
+    }).BindList(new Core.Erp.Bus.General.tb_parroquia_Bus().get_list(Model.IdCiudad,false))
+    .Bind(Model.IdParroquia);
 }
 @comboBox.GetHtml()
