--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
@@ -8,6 +8,107 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script>
+    function AddOP() {
+        var datos = {
+            IDs: selectedIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            IdEmpresa: $("#IdEmpresa").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("EditingAddNew", "ChequeBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data.EsOp == "S") {
+                    $("#cr_Valor").val(data.Valor)
+                }
+            },
+            error: function (error) {
+            }
+        });
+        selectedIDs = "";
+        GridView_egreso_op_x_cruzar.PerformCallback();
+        GridView_egreso_op_x_cruzar.UnselectRows();
+        GridView_egreso_op.PerformCallback();
+        $("#OpModal").modal("hide");
+    }
+
+    var selectedIDs;
+    function OnBeginCallback(s, e) {
+        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
+        e.customArgs["selectedIDs"] = selectedIDs;
+    }
+    function OnSelectionChanged(s, e) {
+        s.GetSelectedFieldValues("IdOrdenPago_op", GetSelectedFieldValuesCallback);
+    }
+    function GetSelectedFieldValuesCallback(values) {
+        //Capture all selected keys
+        selectedIDs = values.join(',');
+    }
+
+    function MostrarModal() {
+        selectedIDs = "";
+
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            IdTipoPersona: $("#IdTipoPersona").val(),
+            IdEntidad: IdEntidad.GetValue(),
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetListPorCruzar", "CajaMovimientoEgreso",new { Area = "Caja"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_egreso_op_x_cruzar.PerformCallback();
+                GridView_egreso_op_x_cruzar.UnselectRows();
+                $("#OpModal").modal("show");
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function armar_diario() {
+        var caja = $("#IdCaja").val();
+        var tipo_movimiento = $("#IdTipoMovi").val();
+        var monto = $("#cr_Valor").val();
+
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdCaja: caja,
+            IdTipoMovi: tipo_movimiento,
+            valor: monto,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("armar_diario", "CajaMovimientoEgreso", new { Area = "Caja" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_comprobante_detalle.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+    }
+</script>
 @using (Html.BeginForm("Nuevo", "CajaMovimientoEgreso", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
@@ -17,13 +118,37 @@
 
     if (ViewBag.mensaje != null)
     {
-        <div class="alert alert-warning alert-dismissible">
-            <h4>
-                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
-            </h4>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-12 alert alert-warning alert-dismissible">
+                    <h4>
+                        <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+                    </h4>
+                </div>
+            </div>
         </div>
-
     }
+
+    <div class="modal fade" id="OpModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Ordenes de pago</h4>
+                </div>
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_egreso_op_x_cruzar")
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="AddOP();">Aceptar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -40,15 +165,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-@Html.DevExpress().DateEditFor(q=> q.cm_fecha, settings =>
-                    {
-                        settings.Name = "cm_fecha";
-                        settings.Properties.UseMaskBehavior = true;
-                        settings.Properties.EditFormat = EditFormat.Date;
-                        settings.Properties.EditFormatString = "dd/MM/yyyy";
-                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                    }).GetHtml()
+                        @Html.DevExpress().DateEditFor(q => q.cm_fecha, settings =>
+{
+    settings.Name = "cm_fecha";
+    settings.Properties.UseMaskBehavior = true;
+    settings.Properties.EditFormat = EditFormat.Date;
+    settings.Properties.EditFormatString = "dd/MM/yyyy";
+    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+}).GetHtml()
                         @Html.ValidationMessageFor(q => q.cm_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -121,76 +246,109 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
+    <div id="Tabs" role="tabpanel">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="active">
+                <a href="#tab_cheque" aria-controls="facturas" role="tab" data-toggle="tab">Diario contable</a>
+            </li>
+            <li>
+                <a href="#tab_op" aria-controls="vales" role="tab" data-toggle="tab">Ordenes de pago</a>
+            </li>
+        </ul>
+        <div class="tab-content" style="padding-top: 20px">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_cheque">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_op">
+                <div class="row">
+                    <div class="col-md-1">
+                        <button type="button" class="btn btn-primary form-control" id="btn_buscar_op" onclick="MostrarModal();" title="Buscar órdenes">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+                <br />
+                @Html.Action("GridViewPartial_egreso_op")
+            </div>
         </div>
+
     </div>
 
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "CajaMovimientoEgreso", new { Area = "Caja" }, null)">Cancelar</a>
-    </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
-}
-<script>
+                
 
-    $("#IdTipoPersona").change(function () {
-        IdEntidad.SetValue(null);
-    });
+                <div class="box-footer">
+                    <button type="submit" class="btn btn-primary">Guardar</button>
+                    <a class="btn btn-default" href="@Url.Action("Index", "CajaMovimientoEgreso", new { Area = "Caja" }, null)">Cancelar</a>
+                </div>
+                @section Scripts {
+                    @Scripts.Render("~/bundles/jqueryval")
+                }
 
-    $("#IdCaja").change(function () {
-        armar_diario();
-    });
 
-    $("#IdTipoMovi").change(function () {
-        armar_diario();
-    });
+                }
+                
+<script type="text/javascript">
 
-    $("#cr_Valor").change(function () {
-        armar_diario();
-    });
+                    $("#IdTipoPersona").change(function () {
+                        IdEntidad.SetValue(null);
+                    });
 
-    function armar_diario() {
-        var caja = $("#IdCaja").val();
-        var tipo_movimiento = $("#IdTipoMovi").val();
-        var monto = $("#cr_Valor").val();
+                    $("#IdCaja").change(function () {
+                        armar_diario();
+                    });
 
-        var datos = {
-            IdEmpresa: $("#IdEmpresa").val(),
-            IdCaja: caja,
-            IdTipoMovi: tipo_movimiento,
-            valor: monto,
-            IdTransaccionSession: $("#IdTransaccionSession").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("armar_diario", "CajaMovimientoIngreso", new { Area = "Caja" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                GridView_comprobante_detalle.PerformCallback();
-            },
-            error: function (error) {
-            }
-        });
-    }
+                    $("#IdTipoMovi").change(function () {
+                        armar_diario();
+                    });
 
-    function OnSelectedCtaCbleChanged() {
-        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
-    }
-    function GrupoComboBox_BeginCallback(s, e) {
-        e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
-        e.customArgs["pre_fecha"] = moment(cm_fecha.GetDate()).format('DD/MM/YYYY');
-    }
+                    $("#cr_Valor").change(function () {
+                        armar_diario();
+                    });
+
+                    function armar_diario() {
+                        var caja = $("#IdCaja").val();
+                        var tipo_movimiento = $("#IdTipoMovi").val();
+                        var monto = $("#cr_Valor").val();
+
+                        var datos = {
+                            IdEmpresa: $("#IdEmpresa").val(),
+                            IdCaja: caja,
+                            IdTipoMovi: tipo_movimiento,
+                            valor: monto,
+                            IdTransaccionSession: $("#IdTransaccionSession").val()
+                        }
+                        $.ajax({
+                            type: 'POST',
+                            data: JSON.stringify(datos),
+                            url: '@Url.Action("armar_diario", "CajaMovimientoEgreso", new { Area = "Caja" })',
+                            async: false,
+                            bDeferRender: true,
+                            bProcessing: true,
+                            dataType: 'json',
+                            contentType: 'application/json; charset=utf-8',
+                            success: function (data) {
+                                GridView_comprobante_detalle.PerformCallback();
+                            },
+                            error: function (error) {
+                            }
+                        });
+                    }
+
+                    function OnSelectedCtaCbleChanged() {
+                        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
+                    }
+                    function GrupoComboBox_BeginCallback(s, e) {
+                        e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
+                        e.customArgs["pre_fecha"] = moment(cm_fecha.GetDate()).format('DD/MM/YYYY');
+                    }
+
+                    
 </script>
