--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Index.cshtml
@@ -63,7 +63,7 @@
                 </div>
             </div>
 
-            @Html.Action("GridViewPartial_ro_rol", new { IdSucursal = ViewBag.IdSucursal })
+            @Html.Action("GridViewPartial_ro_rol", new { IdSucursal = Model.IdSucursal })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
