--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
@@ -105,6 +105,8 @@
                 }
             });
         });
+        
+                settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(9);
 
         settings.Columns.Add("Descripcion","Nómina").Width=Unit.Percentage(9);
         settings.Columns.Add("DescripcionProcesoNomina","Proceso").Width = Unit.Percentage(15);
@@ -124,20 +126,10 @@
             column.PropertiesEdit.DisplayFormatString = "d";
 
         });
-        settings.Columns.Add("Procesado","Procesada").Width=Unit.Percentage(8);
-        settings.Columns.Add("Cerrado","Cerrada").Width = Unit.Percentage(8);
-        settings.Columns.Add("Contabilizado", "Contabilizada").Width = Unit.Percentage(10);
+        settings.Columns.Add("Procesado","Proc.").Width=Unit.Percentage(5);
+        settings.Columns.Add("Cerrado","Cerrada").Width = Unit.Percentage(5);
+        settings.Columns.Add("Contabilizado", "Contab.").Width = Unit.Percentage(5);
 
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "Archivo";
-
-            column.SetDataItemTemplateContent(c =>
-            {
-                ViewContext.Writer.Write("<span class=\"glyphicon fa-file-archive-o\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("Nuevo", "ArchivosTransferencias", new { Area = "RRHH", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa"), IdNomina_Tipo = DataBinder.Eval(c.DataItem, "IdNomina_Tipo"), IdNomina_TipoLiqui = DataBinder.Eval(c.DataItem, "IdNomina_TipoLiqui"), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo") }, Request.Url.Scheme) + "');\"></span>");
-            });
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(6);
-        });
 
         settings.Columns.Add(column =>
         {
