--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
@@ -18,7 +18,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("EditingAddNew", "ChequeBanco",new { Area = "Banco"})',
+            url: '@Url.Action("EditingAddNew", "CajaMovimientoEgreso", new { Area = "Caja"})',
             async: false,
             bDeferRender: true,
             bProcessing: true,
@@ -102,6 +102,9 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
+                if (data.EsOp == "S") {
+                    $("#cr_Valor").val(data.Valor)
+                }
                 GridView_comprobante_detalle.PerformCallback();
             },
             error: function (error) {
@@ -335,6 +338,9 @@
                             dataType: 'json',
                             contentType: 'application/json; charset=utf-8',
                             success: function (data) {
+                                if (data.EsOp == "S") {
+                                    $("#cr_Valor").val(data.Valor)
+                                }
                                 GridView_comprobante_detalle.PerformCallback();
                             },
                             error: function (error) {
