--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_retenciones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_retenciones.cshtml
@@ -101,6 +101,14 @@
         {
             column.SetDataItemTemplateContent(c =>
             {
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXP_012", "CuentasPorPagarReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdRetencion = DataBinder.Eval(c.DataItem, "IdRetencion").ToString() }, Request.Url.Scheme) + "');\"></span>");
+            });
+            column.Width = Unit.Percentage(5);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.SetDataItemTemplateContent(c =>
+            {
                 ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXP_013", "CuentasPorPagarReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdRetencion = DataBinder.Eval(c.DataItem, "IdRetencion").ToString() }, Request.Url.Scheme) + "');\"></span>");
             });
             column.Width = Unit.Percentage(5);
