--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Modificar.cshtml
@@ -61,6 +61,7 @@
 
 
     <div class="box-footer">
+        <button type="button" class="btn btn-primary" onclick="cargar_empleados();">Cargar registro</button>
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","PagosEnCheques",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
