--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_retenciones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/_GridViewPartial_retenciones.cshtml
@@ -85,7 +85,7 @@
         settings.Columns.Add("serie2","PtoEmi").Width = Unit.Percentage(5);
         settings.Columns.Add("NumRetencion","Retención").Width = Unit.Percentage(15);
         settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(30);
-        settings.Columns.Add("co_serie", "Serie documento").Width = Unit.Percentage(15);
+        settings.Columns.Add("co_serie", "Serie documento").Width = Unit.Percentage(10);
         settings.Columns.Add("co_factura","#documento").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
@@ -96,6 +96,14 @@
             {
 
             });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.SetDataItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXP_012", "CuentasPorPagarReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdRetencion = DataBinder.Eval(c.DataItem, "IdRetencion").ToString() }, Request.Url.Scheme) + "');\"></span>");
+            });
+            column.Width = Unit.Percentage(5);
         });
         settings.Columns.Add(column =>
         {
