--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Modificar.cshtml
@@ -205,6 +205,7 @@
                     IdNomina_Tipo: $("#IdNomina_Tipo").val(),
                     IdNomina_TipoLiqui: $("#IdNomina_TipoLiqui").val(),
                     IdPeriodo: $("#IdPeriodo").val(),
+                    IdSucursal: $("#IdSucursal").val(),
                     IdTransaccionSession: $("#IdTransaccionSession").val()
 
                 }
