--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -523,9 +523,14 @@
 
 
                 <div class="row">
-                    <div class="col-md-12">
-                        
-
+                    <div class="col-md-12">  
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="Anticipo_Sueldo">% Anticipo Sueldo</label>
+                                @Html.TextBoxFor(q => q.em_AnticipoSueldo, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.em_AnticipoSueldo, "", new { @class = "text-danger" })
+                            </div>
+                        </div>                      
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label for="es_AcreditaHorasExtras"></label>
